# portfolio

./: .gitignore  README.md  jest.config.cjs  package-lock.json  package.json  pyproject.toml
__mocks__/: fileMock.cjs
backend/: database.py  entities.py  main.py  schema.py
backend/routers/: experiences.py  projects.py  skillshobbies.py
frontend/: babel.config.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/__tests__/: App.test.jsx  Exp.test.jsx  Projects.test.jsx  home.test.jsx
frontend/src/: App.jsx  App.tsx  constants.ts  index.css  types.d.ts
frontend/src/components/: Contact.jsx  Contact.tsx  Exp.jsx  Exp.tsx  ExpCard.jsx  ExpCard.tsx  Home.jsx  Home.tsx  ProjectCard.jsx  ProjectCard.tsx  ProjectInfo.jsx  Projects.jsx  Projects.tsx  SkillCard.jsx  SkillHob.jsx  WorkExp.jsx
