[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["timlocott <tsam.cottrell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
